--- a/subdomain_tokeover.html
+++ b/subdomain_tokeover.html
@@ -67,13 +67,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Subdomain Takeover Warning</h1>
+        <h1>Subdomain Takeover by ppwq@hlm</h1>
 
        
     </div>
 
     <script>
-    	alert('Subdomain Takeover Warning')
+    	alert('Subdomain Takeover by ppwq@hlm')
     </script>
 </body>
 </html>
